// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with styles 1`] = `
.emotion-9 {
  display: grid;
  padding: 8px;
  grid-gap: 8px;
  width: 256px;
  border-radius: 4px;
  background-color: white;
  box-shadow: 0 2px 8px 1px rgba(0,0,0,.125);
}

.emotion-1 {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 75%;
}

.emotion-0 {
  width: 16px;
  height: 16px;
  border-radius: 9999px;
  border: 1px solid white;
  -webkit-transform: translate(-8px,-8px);
  -ms-transform: translate(-8px,-8px);
  transform: translate(-8px,-8px);
}

.emotion-3 {
  position: relative;
  width: 100%;
  height: 8px;
}

.emotion-2 {
  width: 12px;
  height: 12px;
  border-radius: 9999px;
  background-color: white;
  box-shadow: 0 0 2px rgba(0,0,0,.25);
  -webkit-transform: translate(-6px,-2px);
  -ms-transform: translate(-6px,-2px);
  transform: translate(-6px,-2px);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  display: block;
  width: 100%;
  font-size: 10px;
}

.emotion-4 input:focus {
  color: primary;
  background-color: highlight;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-1"
  >
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "MozBorderRadius": undefined,
          "OBorderRadius": undefined,
          "WebkitBorderRadius": undefined,
          "background": "hsl(0,100%, 50%)",
          "borderRadius": undefined,
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": undefined,
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    >
      <style>
        
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
      </style>
      <div
        className="saturation-white"
        style={
          Object {
            "MozBorderRadius": undefined,
            "OBorderRadius": undefined,
            "WebkitBorderRadius": undefined,
            "borderRadius": undefined,
            "bottom": "0px",
            "left": "0px",
            "msBorderRadius": undefined,
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      >
        <div
          className="saturation-black"
          style={
            Object {
              "MozBorderRadius": undefined,
              "MozBoxShadow": undefined,
              "OBorderRadius": undefined,
              "OBoxShadow": undefined,
              "WebkitBorderRadius": undefined,
              "WebkitBoxShadow": undefined,
              "borderRadius": undefined,
              "bottom": "0px",
              "boxShadow": undefined,
              "left": "0px",
              "msBorderRadius": undefined,
              "msBoxShadow": undefined,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        />
        <div
          style={
            Object {
              "cursor": "default",
              "left": "100%",
              "position": "absolute",
              "top": "0%",
            }
          }
        >
          <div
            className="emotion-0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-3"
  >
    <div
      style={
        Object {
          "MozBorderRadius": undefined,
          "MozBoxShadow": undefined,
          "OBorderRadius": undefined,
          "OBoxShadow": undefined,
          "WebkitBorderRadius": undefined,
          "WebkitBoxShadow": undefined,
          "borderRadius": undefined,
          "bottom": "0px",
          "boxShadow": undefined,
          "left": "0px",
          "msBorderRadius": undefined,
          "msBoxShadow": undefined,
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    >
      <div
        className="hue-horizontal"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "MozBorderRadius": undefined,
            "OBorderRadius": undefined,
            "WebkitBorderRadius": undefined,
            "borderRadius": undefined,
            "height": "100%",
            "msBorderRadius": undefined,
            "padding": "0 2px",
            "position": "relative",
          }
        }
      >
        <style>
          
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
        </style>
        <div
          style={
            Object {
              "left": "0%",
              "position": "absolute",
            }
          }
        >
          <div
            className="emotion-2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-8"
  >
    <label
      className="emotion-4"
    >
      Hex
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="hex"
          spellCheck="false"
          style={
            Object {
              "border": 0,
              "fontFamily": "Menlo, monospace",
              "fontSize": 12,
              "margin": 0,
              "outline": "none",
              "padding": 0,
              "width": "100%",
            }
          }
          value="#FF0000"
        />
        <span
          onMouseDown={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          hex
        </span>
      </div>
    </label>
    <label
      className="emotion-4"
    >
      Hue
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="hue"
          spellCheck="false"
          style={
            Object {
              "border": 0,
              "fontFamily": "Menlo, monospace",
              "fontSize": 12,
              "margin": 0,
              "outline": "none",
              "padding": 0,
              "width": "100%",
            }
          }
          value="0"
        />
        <span
          onMouseDown={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          h
        </span>
      </div>
    </label>
    <label
      className="emotion-4"
    >
      Saturation
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="saturation"
          spellCheck="false"
          style={
            Object {
              "border": 0,
              "fontFamily": "Menlo, monospace",
              "fontSize": 12,
              "margin": 0,
              "outline": "none",
              "padding": 0,
              "width": "100%",
            }
          }
          value="100"
        />
        <span
          onMouseDown={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          s
        </span>
      </div>
    </label>
    <label
      className="emotion-4"
    >
      Lightness
      <div
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <input
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="lightness"
          spellCheck="false"
          style={
            Object {
              "border": 0,
              "fontFamily": "Menlo, monospace",
              "fontSize": 12,
              "margin": 0,
              "outline": "none",
              "padding": 0,
              "width": "100%",
            }
          }
          value="50"
        />
        <span
          onMouseDown={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        >
          l
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`snapshot renders as a popover 1`] = `
Array [
  <div
    aria-controls="hidden-1"
    aria-expanded={false}
    aria-haspopup="dialog"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
    type="button"
  >
    <button>
      Edit color
    </button>
  </div>,
  .emotion-9 {
  display: grid;
  padding: 8px;
  grid-gap: 8px;
  width: 256px;
  border-radius: 4px;
  background-color: white;
  box-shadow: 0 2px 8px 1px rgba(0,0,0,.125);
}

.emotion-1 {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 75%;
}

.emotion-0 {
  width: 16px;
  height: 16px;
  border-radius: 9999px;
  border: 1px solid white;
  -webkit-transform: translate(-8px,-8px);
  -ms-transform: translate(-8px,-8px);
  transform: translate(-8px,-8px);
}

.emotion-3 {
  position: relative;
  width: 100%;
  height: 8px;
}

.emotion-2 {
  width: 12px;
  height: 12px;
  border-radius: 9999px;
  background-color: white;
  box-shadow: 0 0 2px rgba(0,0,0,.25);
  -webkit-transform: translate(-6px,-2px);
  -ms-transform: translate(-6px,-2px);
  transform: translate(-6px,-2px);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  display: block;
  width: 100%;
  font-size: 10px;
}

.emotion-4 input:focus {
  color: primary;
  background-color: highlight;
}

.emotion-10 {
  outline: none;
}

<div
    aria-label="Edit color"
    aria-modal={false}
    className="emotion-10"
    data-dialog={true}
    hidden={true}
    id="hidden-1"
    onAnimationEnd={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
        "zIndex": null,
      }
    }
    tabIndex={-1}
  >
    <div
      className="emotion-9"
    >
      <div
        className="emotion-1"
      >
        <div
          onMouseDown={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "MozBorderRadius": undefined,
              "OBorderRadius": undefined,
              "WebkitBorderRadius": undefined,
              "background": "hsl(0,100%, 50%)",
              "borderRadius": undefined,
              "bottom": "0px",
              "left": "0px",
              "msBorderRadius": undefined,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <style>
            
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
          </style>
          <div
            className="saturation-white"
            style={
              Object {
                "MozBorderRadius": undefined,
                "OBorderRadius": undefined,
                "WebkitBorderRadius": undefined,
                "borderRadius": undefined,
                "bottom": "0px",
                "left": "0px",
                "msBorderRadius": undefined,
                "position": "absolute",
                "right": "0px",
                "top": "0px",
              }
            }
          >
            <div
              className="saturation-black"
              style={
                Object {
                  "MozBorderRadius": undefined,
                  "MozBoxShadow": undefined,
                  "OBorderRadius": undefined,
                  "OBoxShadow": undefined,
                  "WebkitBorderRadius": undefined,
                  "WebkitBoxShadow": undefined,
                  "borderRadius": undefined,
                  "bottom": "0px",
                  "boxShadow": undefined,
                  "left": "0px",
                  "msBorderRadius": undefined,
                  "msBoxShadow": undefined,
                  "position": "absolute",
                  "right": "0px",
                  "top": "0px",
                }
              }
            />
            <div
              style={
                Object {
                  "cursor": "default",
                  "left": "100%",
                  "position": "absolute",
                  "top": "0%",
                }
              }
            >
              <div
                className="emotion-0"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-3"
      >
        <div
          style={
            Object {
              "MozBorderRadius": undefined,
              "MozBoxShadow": undefined,
              "OBorderRadius": undefined,
              "OBoxShadow": undefined,
              "WebkitBorderRadius": undefined,
              "WebkitBoxShadow": undefined,
              "borderRadius": undefined,
              "bottom": "0px",
              "boxShadow": undefined,
              "left": "0px",
              "msBorderRadius": undefined,
              "msBoxShadow": undefined,
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            className="hue-horizontal"
            onMouseDown={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "MozBorderRadius": undefined,
                "OBorderRadius": undefined,
                "WebkitBorderRadius": undefined,
                "borderRadius": undefined,
                "height": "100%",
                "msBorderRadius": undefined,
                "padding": "0 2px",
                "position": "relative",
              }
            }
          >
            <style>
              
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
            </style>
            <div
              style={
                Object {
                  "left": "0%",
                  "position": "absolute",
                }
              }
            >
              <div
                className="emotion-2"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="emotion-8"
      >
        <label
          className="emotion-4"
        >
          Hex
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <input
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="hex"
              spellCheck="false"
              style={
                Object {
                  "border": 0,
                  "fontFamily": "Menlo, monospace",
                  "fontSize": 12,
                  "margin": 0,
                  "outline": "none",
                  "padding": 0,
                  "width": "100%",
                }
              }
              value="#FF0000"
            />
            <span
              onMouseDown={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
            >
              hex
            </span>
          </div>
        </label>
        <label
          className="emotion-4"
        >
          Hue
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <input
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="hue"
              spellCheck="false"
              style={
                Object {
                  "border": 0,
                  "fontFamily": "Menlo, monospace",
                  "fontSize": 12,
                  "margin": 0,
                  "outline": "none",
                  "padding": 0,
                  "width": "100%",
                }
              }
              value="0"
            />
            <span
              onMouseDown={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
            >
              h
            </span>
          </div>
        </label>
        <label
          className="emotion-4"
        >
          Saturation
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <input
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="saturation"
              spellCheck="false"
              style={
                Object {
                  "border": 0,
                  "fontFamily": "Menlo, monospace",
                  "fontSize": 12,
                  "margin": 0,
                  "outline": "none",
                  "padding": 0,
                  "width": "100%",
                }
              }
              value="100"
            />
            <span
              onMouseDown={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
            >
              s
            </span>
          </div>
        </label>
        <label
          className="emotion-4"
        >
          Lightness
          <div
            style={
              Object {
                "position": "relative",
              }
            }
          >
            <input
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="lightness"
              spellCheck="false"
              style={
                Object {
                  "border": 0,
                  "fontFamily": "Menlo, monospace",
                  "fontSize": 12,
                  "margin": 0,
                  "outline": "none",
                  "padding": 0,
                  "width": "100%",
                }
              }
              value="50"
            />
            <span
              onMouseDown={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
            >
              l
            </span>
          </div>
        </label>
      </div>
    </div>
  </div>,
]
`;
